--- a/note/javascript/01.md
+++ b/note/javascript/01.md
@@ -808,25 +808,708 @@ b.doSomething();
 // ...});
 ```
 
-##  ES6 与 模块与 CommonJS 模块、AMD 、CMD 的差异
+## ES6 与 模块与 CommonJS 模块、AMD 、CMD 的差异
 
 CommonJS 模块输出的是一个值的拷贝，ES6 模块输出的是值的引用,CommonJS 模块输出的是值的拷贝，也就是说，一旦输出一个值，模块内部的变化就影响不到这个值。ES6 模块的运行机制与 CommonJS 不一样。JS 引擎对脚本静态分析的时候，遇到模块加载命令 import，就会生成一个只读引用。等到脚本真正执行时，再根据这个只读引用，到被加载的那个模块里面去取值。
 
-CommonJS 模块是运行时加载，ES6 模块是编译时输出接口。CommonJS 模块就是对象，即在输入时是先加载整个模块，生成一个对象，然后再从这个对象上面读取方法，这种加载称为“**运行时加载**”。而 **ES6模块不是对象，它的对外接口只是一种静态定义**，**在代码静态解析阶段就会生成**。
+CommonJS 模块是运行时加载，ES6 模块是编译时输出接口。CommonJS 模块就是对象，即在输入时是先加载整个模块，生成一个对象，然后再从这个对象上面读取方法，这种加载称为“**运行时加载**”。而 **ES6 模块不是对象，它的对外接口只是一种静态定义**，**在代码静态解析阶段就会生成**。
 
-
-##  requireJS 的核心原理是什么？（如何动态加载的？如何避免多次加载 的核心原理是什么？)
+## requireJS 的核心原理是什么？（如何动态加载的？如何避免多次加载 的核心原理是什么？)
 
 require.js 的核心原理是通过动态创建 script 脚本来异步引入模块，然后对每个脚本的 load 事件进行监听，如果每个脚本都加载完成了，再调用回调函数。
 
-## ECMAScript6怎么写 class现 ，为什么会出现 class 这种东西
+## ECMAScript6 怎么写 class 现 ，为什么会出现 class 这种东西
 
-在我看来 ES6 新添加的 class 只是为了补充 js 中缺少的一些面向对象语言的特性，但本质上来说它只是一种语法糖，不是一个新的东西，其背后还是原型继承的思想。通过加入class 可以有利于我们更好的组织代码。在 class 中添加的方法，其实是添加在类的原型上的。
+在我看来 ES6 新添加的 class 只是为了补充 js 中缺少的一些面向对象语言的特性，但本质上来说它只是一种语法糖，不是一个新的东西，其背后还是原型继承的思想。通过加入 class 可以有利于我们更好的组织代码。在 class 中添加的方法，其实是添加在类的原型上的。
 
-##  documen.write 和innerHTML 的区别？
+## documen.write 和 innerHTML 的区别？
 
 document.write 的内容会代替整个文档内容，会重写整个页面。
 
 innerHTML 的内容只是替代指定元素的内容，只会重写页面中的部分内容。
+
+## DOM 操作——怎样添加、移除、移动、复制、创建和查找节点
+
+（1）创建新节点
+
+```js
+createDocumentFragment(node);
+createElement(node);
+createTextNode(text);
+```
+
+（2）添加、移除、替换、插入
+
+```js
+appendChild(node)removeChild(node)replaceChild(new,old)insertBefore(new,old)
+```
+
+（3）查找
+
+```js
+getElementById();
+getElementsByName();
+getElementsByTagName();
+getElementsByClassName();
+querySelector();
+querySelectorAll();
+```
+
+（4）属性操作
+
+```js
+getAttribute(key);
+setAttribute(key, value);
+hasAttribute(key);
+removeAttribute(key);
+```
+
+（1）创建新节点
+
+```js
+createDocumentFragment(node);
+createElement(node);
+createTextNode(text);
+```
+
+（2）添加、移除、替换、插入
+
+```js
+appendChild(node)removeChild(node)replaceChild(new,old)insertBefore(new,old)
+```
+
+（3）查找
+
+```js
+getElementById();
+getElementsByName();
+getElementsByTagName();
+getElementsByClassName();
+querySelector();
+querySelectorAll();
+```
+
+（4）属性操作
+
+```js
+getAttribute(key);
+setAttribute(key, value);
+hasAttribute(key);
+removeAttribute(key);
+```
+
+## innerHTML 与 与 outerHTML 的区别？
+
+对于这样一个 HTML 元素：`<div>content<br/></div>`。
+
+innerHTML：内部 HTML，`content<br/>`
+
+outerHTML：外部 HTML，`<div>content<br/></div>`
+
+innerText：内部文本，content
+
+outerText：内部文本，content
+
+## .call() 和.apply() 的区别
+
+它们的作用一模一样，区别仅在于传入参数的形式的不同。
+
+apply 接受两个参数，第一个参数指定了函数体内 this 对象的指向，第二个参数为一个带下标的集合，这个集合可以为数组，也可以为类数组，apply 方法把这个集合中的元素作为参数传递给被调用的函数。call 传入的参数数量不固定，跟 apply 相同的是，第一个参数也是代表函数体内的 this 指向，从第二个参数开始往后，每个参数被依次传入函数
+
+## JavaScript 类数组对象的定义
+
+一个**拥有 length 属性和若干索引属性的对象**就可以被称为类数组对象，类数组对象和数组类似，但是不能调用数组的方法。**常见的类数组对象有 arguments 和 DOM 方法的返回结果**，还有一个**函数也可以被看作是类数组对象，因为它含有 length 属性值，代表可接收的参数个数**。
+
+常见的类数组转换为数组的方法有这样几种：
+
+- 通过 call 调用数组的 slice 方法来实现转换 Array.prototype.slice.call(arrayLike);
+- 通过 call 调用数组的 splice 方法来实现转换 Array.prototype.splice.call(arrayLike, 0);
+- 通过 apply 调用数组的 concat 方法来实现转换 Array.prototype.concat.apply([], arrayLike);
+- 通过 Array.from 方法来实现转换 Array.from(arrayLike);
+
+## 数组有哪些原生方法，列举一下
+
+数组和字符串的转换方法：toString()、toLocalString()、join() 其中 join() 方法可以指定转换为字符串时的分隔符。数组尾部操作的方法 pop() 和 push()，push 方法可以传入多个参数。数组首部操作的方法 shift() 和 unshift() 重排序的方法 reverse() 和 sort()，sort() 方法可以传入一个函数来进行比较，传入前后两个值，如果返回值为正数，则交换两个参数的位置。
+
+- 数组连接的方法 concat() ，返回的是拼接好的数组，不影响原数组。
+- 数组截取办法 slice()，用于截取数组中的一部分返回，不影响原数组。
+- 数组插入方法 splice()，影响原数组查找特定项的索引的方法，indexOf() 和 lastIndexOf() 迭代方法 every()、some()、filter()、map() 和 forEach() 方法
+- 数组归并方法 reduce() 和 reduceRight() 方法
+
+## 数组的 fill 方法？
+
+fill() 方法用一个固定值填充一个数组中从起始索引到终止索引内的全部元素。不包括终止索引。
+
+fill 方法接受三个参数 value，start 以及 end，start 和 end 参数是可选的，其默认值分别为 0 和 this 对象的 length 属性值。
+
+## [,,,] 的长度？
+
+尾后逗号 （有时叫做“终止逗号”）在向 JavaScript 代码添加元素、参数、属性时十分有用。如果你想要添加新的属性，并且上一行已经使用了尾后逗号，你可以仅仅添加新的一行，而不需要修改上一行。这使得版本控制更加清晰，以及代码维护麻烦更少。
+
+JavaScript 一开始就支持数组字面值中的尾后逗号，随后向对象字面值（ECMAScript 5）中添加了尾后逗号。最近（ECMAScript 2017），又将其添加到函数参数中。但是 JSON 不支持尾后逗号。如果使用了多于一个尾后逗号，会产生间隙。 带有间隙的数组叫做稀疏数组（密致数组没有间隙）。**稀疏数组的长度为逗号的数量**。
+
+## JavaScript 中的作用域与变量声明提升
+
+变量提升的表现是，无论我们在函数中何处位置声明的变量，好像都被提升到了函数的首部，我们可以在变量声明前访问到而不会报错。造成变量声明提升的本质原因是 **js 引擎在代码执行前有一个解析的过程**，创建了**执行上下文**，初始化了一些代码执行时需要用到的对象。当我们访问一个变量时，我们会到当前执行上下文中的作用域链中去查找，而作用域链的首端指向的是当前执行上下文的变量对象，这个变量对象是执行上下文的一个属性，它包含了函数的形参、所有的函数和变量声明，这个对象是在代码解析的时候创建的。这就是会出现变量声明提升的根本原因。
+
+## 如何编写高性能的 Javascript
+
+- 使用位运算代替一些简单的四则运算。
+- 避免使用过深的嵌套循环。
+- 不要使用未定义的变量。
+- 当需要多次访问数组长度时，可以用变量保存起来，避免每次都会去进行属性查找。
+
+## 简单介绍一下 V8 引擎的垃圾回收机制
+
+v8 的垃圾回收机制**基于分代回收机制**，这个机制又基于世代假说，这个假说有两个特点，一是新生的对象容易早死，另一个是不死的对象会活得更久。基于这个假说，**v8 引擎将内存分为了新生代和老生代**。新创建的对象或者只经历过一次的垃圾回收的对象被称为新生代。经历过多次垃圾回收的对象被称为老生代。
+
+**新生代被分为 From 和 To 两个空间**，To 一般是闲置的。当 From 空间满了的时候会执行 Scavenge 算法进行垃圾回收。**当我们执行垃圾回收算法的时候应用逻辑将会停止，等垃圾回收结束后再继续执行**。这个算法分为三步：
+
+（1）首先检查 From 空间的存活对象，如果对象存活则判断对象是否满足晋升到老生代的条件，如果满足条件则晋升到老生代。如果不满足条件则移动 To 空间。
+（2）如果对象不存活，则释放对象的空间。
+（3）最后将 From 空间和 To 空间角色进行交换。
+
+新生代对象晋升到老生代有两个条件：
+
+（1）第一个是判断是对象否**已经经过一次 Scavenge 回收**。若经历过，则将对象从 From 空间复制到老生代中；若没有经历，则复制到 To 空间。
+（2）第二个是 **To 空间的内存使用占比是否超过限制**。当对象从 From 空间复制到 To 空间时，若 **To 空间使用超过 25%**，则对象直接晋升到老生代中。设置 25% 的原因主要是因为算法结束后，两个空间结束后会交换位置，如果 To 空间的内存太小，会影响后续的内存分配。
+
+老生代采用了**标记清除法**和**标记压缩法**。标记清除法首先会对内存中存活的对象进行标记，标记结束后清除掉那些没有标记的对象。由于**标记清除后会造成很多的内存碎片，不便于后面的内存分配**。所以了解决内存碎片的问题引入了标记压缩法。由于在进行垃圾回收的时候会暂停应用的逻辑，对于新生代方法由于内存小，每次停顿的时间不会太长，但**对于老生代来说每次垃圾回收的时间长，停顿会造成很大的影响**。 为了解决这个问题 V8 引入了**增量标记的方法**，将一次停顿进行的过程分为了多步，每次执行完一小步就让运行逻辑执行一会，就这样交替运行。
+
+## 哪些操作会造成内存泄漏
+
+相关知识点：
+
+- 意外的全局变量
+- 被遗忘的计时器或回调函数
+- 脱离 DOM 的引用
+- 闭包
+
+回答：
+
+第一种情况是我们由于使用**未声明的变量**，而意外的创建了一个全局变量，而使这个变量一直留在内存中无法被回收。
+
+第二种情况是我们设置了 **setInterval 定时器**，而忘记取消它，如果循环函数有对外部变量的引用的话，那么这个变量会被一直留在内存中，而无法被回收。
+
+第三种情况是我们获取一个 **DOM 元素的引用**，而后面这个元素被删除，由于我们一直保留了对这个元素的引用，所以它也无法被回收。
+
+第四种情况是不合理的使用**闭包**，从而导致某些变量一直被留在内存当中。
+
+## 实现一个页面操作不会整页刷新的网站 ， 并且能在浏览器前进 、 后退时正确响应
+
+通过使用 pushState + ajax 实现浏览器无刷新前进后退，当一次 ajax 调用成功后我们将一条 state 记录加入到 history
+
+对象中。**一条 state 记录包含了 url、title 和 content 属性**，在 popstate 事件中可以获取到这个 state 对象，我们可以使用 content 来传递数据。最后我们通过对 **window.onpopstate 事件监听来响应浏览器的前进后退操作**。
+
+使用 pushState 来实现有两个问题，一个是打开首页时没有记录，我们可以使用 replaceState 来将首页的记录替换，另一个问题是当一个页面刷新的时候，仍然会向服务器端请求数据，因此如果请求的 url 需要后端的配合将其重定向到一个页面
+
+## 如何判断当前脚本运行在浏览器还是 node 环境中
+
+`this === window ? 'browser' : 'node';`
+
+通过判断 Global 对象是否为 window，如果不为 window，当前脚本没有运行在浏览器中。
+
+## 为什么不把 Script 标签放在 body 结束标签之后 html 结束标签之前
+
+第一，这是不合标准的行为，而且从有 HTML 标准以来都是不合标准的，因此浏览器实现不一致或者在这种情况下有 bug 的风险显然更大。
+
+第二，虽然将`<script>写在</body>`之后，但最终的 DOM 树里，`<script>`元素还是会成为 body 的子节点，这一点很容易在 firebug 等调试器里验证。既然如此，如果将`<script>`写在`</body>`之前会有问题，你又如何保证写在之后（并在 DOM 里又变成了和写在之前一样的结构）就没有问题？
+
+## 移动端的点击事件的有延迟，时间是多久，为什么会有？ 移动端的点击事件的有延迟，时间是多久，为什么会有？ 怎么解决这个延时
+
+移动端点击有 300ms 的延迟是因为移动端会有双击缩放的这个操作，因此浏览器在 click 之后要等待 300ms，看用户有没有下一次点击，来判断这次操作是不是双击。
+
+有三种办法来解决这个问题：
+
+- 通过 meta 标签**禁用网页的缩放**。
+- 通过 meta 标签将网页的 viewport 设置为 **ideal viewport**。
+- 调用一些 js 库，比如 **FastClick**
+
+click 延时问题还可能引起**点击穿透**的问题，就是如果我们在一个元素上注册了 touchStart 的监听事件，这个事件会将这个元素隐藏掉，我们发现当这个元素隐藏后，触发了这个元素下的一个元素的点击事件，这就是点击穿透。
+
+## 什么是“ 前端路由” ？什么时候适合使用“ 前端路由” ？“ 前端路由有哪些优点和缺点
+
+（1）什么是前端路由？
+
+前端路由就是把不同路由对应不同的内容或页面的任务交给前端来做，之前是通过服务端根据 url 的不同返回不同的页面实现的。
+
+（2）什么时候使用前端路由？
+
+在单页面应用，大部分页面结构不变，只改变部分内容的使用
+
+（3）前端路由有什么优点和缺点？
+
+优点：用户体验好，不需要每次都从服务器全部获取，快速展现给用户
+
+缺点：单页面无法记住之前滚动的位置，无法在前进，后退的时候记住滚动的位置前端路由一共有两种实现方式，一种是通过 hash 的方式，一种是通过使用 pushState 的方式。
+
+## 如何测试前端代码 BDD, TDD, Unit Test 怎么测试你的前端工程(mocha, sinon, jasmin, qUnit..)
+
+[浅谈前端单元测试](https://juejin.cn/post/6844903624301084680)
+
+## 检测浏览器版本版本有哪些方式
+
+检测浏览器版本一共有两种方式：
+
+一种是检测 window.navigator.userAgent 的值，但这种方式很不可靠，因为 userAgent 可以被改写，并且早期的浏览器如 ie，会通过伪装自己的 userAgent 的值为 Mozilla 来躲过服务器的检测。
+
+第二种方式是功能检测，根据每个浏览器独有的特性来进行判断，如 ie 下独有的 ActiveXObject。
+
+## 什么是 Polyfil
+
+Polyfill 指的是用于**实现浏览器并不支持的原生 API 的代码**。比如说 querySelectorAll 是很多现代浏览器都支持的原生 Web API，但是有些古老的浏览器并不支持，那么假设有人写了一段代码来实现这个功能使这些浏览器也支持了这个功能，那么这就可以成为一个 Polyfill。
+
+一个 shim 是一个库，有自己的 API，而不是单纯实现原生不支持的 API。
+
+## 使用 JS 实现获取文件扩展名？
+
+`String.lastIndexOf() `方法返回指定值（本例中的'.'）在调用该方法的字符串中最后出现的位置，如果没找到则返回 -1。
+对于 'filename' 和 '.hiddenfile' ，lastIndexOf 的返回值分别为 0 和 -1
+
+无符号右移操作符(>>>) 将 -1 转换为 4294967295 ，将 -2 转换为 4294967294 ，这个方法可以保证边缘情况时文件名不变。
+
+`String.prototype.slice()` 从上面计算的索引处提取文件的扩展名。如果索引比文件名的长度大，结果为""。
+
+```js
+function getFileExtension(filename) {
+  return filename.slice(((filename.lastIndexOf(".") - 1) >>> 0) + 2);
+}
+```
+
+## 介绍一下 js 的节流与防抖
+
+相关知识点：
+
+函数防抖： 在**事件被触发 n 秒后再执行回调**，如果在这 n 秒内事件又被触发，则重新计时。
+
+函数节流： 规定一个单位时间，**在这个单位时间内，只能有一次触发事件的回调函数执行**，如果在同一个单位时间内某事件被触发多次，只有一次能生效。
+
+函数防抖的实现
+
+```js
+function debounce(fn, wait) {
+  var timer = null;
+  return function () {
+    var context = this,
+      args = arguments;
+    // 如果此时存在定时器的话，则取消之前的定时器重新记时
+    if (timer) {
+      clearTimeout(timer);
+      timer = null;
+    }
+    // 设置定时器，使事件间隔指定事件后执行
+    timer = setTimeout(() => {
+      fn.apply(context, args);
+    }, wait);
+  };
+}
+```
+
+函数节流的实现;
+
+```js
+function throttle(fn, delay) {
+  var preTime = Date.now();
+  return function () {
+    var context = this,
+      args = arguments,
+      nowTime = Date.now();
+    // 如果两次时间间隔超过了指定时间，则执行函数。
+    if (nowTime - preTime >= delay) {
+      preTime = Date.now();
+      return fn.apply(context, args);
+    }
+  };
+}
+```
+
+回答：
+
+函数防抖是指在事件被触发 n 秒后再执行回调，如果在这 n 秒内事件又被触发，则重新计时。这可以使用在一些点击请求的事件上，**避免因为用户的多次点击向后端发送多次请求**。函数节流是指规定一个单位时间，在这个单位时间内，只能有一次触发事件的回调函数执行，如果在同一个单位时间内某事件被触发多次，只有一次能生效。**节流可以使用在 scroll 函数的事件监听上，通过事件节流来降低事件调用的频率**。
+
+## Object.is() 符 与原来的比较操作符 “===” 、“==” 的区别
+
+相关知识点：
+
+两等号判等，会在比较时进行类型转换。
+
+三等号判等（判断严格），比较时不进行隐式类型转换，（类型不同则会返回 false）。
+
+Object.is 在三等号判等的基础上特别处理了 NaN 、-0 和 +0 ，**保证 -0 和 +0 不再相同**，但 **Object.is(NaN, NaN) 会返回 true**.**Object.is 应被认为有其特殊的用途，而不能用它认为它比其它的相等对比更宽松或严格。**
+
+回答：
+
+使用双等号进行相等判断时，如果两边的类型不一致，则会进行强制类型转化后再进行比较。
+
+使用三等号进行相等判断时，如果两边的类型不一致时，不会做强制类型准换，直接返回 false。
+
+使用 Object.is 来进行相等判断时，一般情况下和三等号的判断相同，它**处理了一些特殊的情况**，比如 -0 和 +0 不再相等，两个 NaN 认定为是相等的。
+
+## escape,encodeURI,encodeURIComponent 有什么区别？
+
+相关知识点：
+
+escape 和 encodeURI 都属于 Percent-encoding，基本功能都是把 URI 非法字符转化成合法字符，转化后形式类似「%\*」。
+
+它们的根本区别在于，**escape 在处理 0xff 之外字符的时候，是直接使用字符的 unicode 在前面加上一个「%u」**，而 **encode URI 则是先进行 UTF-8，再在 UTF-8 的每个字节码前加上一个「%」**；在处理 0xff 以内字符时，编码方式是一样的（都是「%XX」，XX 为字符的 16 进制 unicode，同时也是字符的 UTF-8），只是范围（即哪些字符编码哪些字符不编码）不一样。
+
+回答：
+
+encodeURI 是对整个 URI 进行转义，将 URI 中的非法字符转换为合法字符，所以对于一些在 URI 中有特殊意义的字符不会进行转义。
+
+encodeURIComponent 是对 URI 的组成部分进行转义，所以一些特殊字符也会得到转义。
+
+escape 和 encodeURI 的作用相同，不过它们对于 unicode 编码为 0xff 之外字符的时候会有区别，**escape 是直接在字符的 unicode 编码前加上 %u，而 encodeURI 首先会将字符转换为 UTF-8 的格式，再在每个字节前加上 %**。
+
+## Unicode 和 和 UTF-8 之间的关系
+
+Unicode 是一种字符集合，现在可容纳 100 多万个字符。每个字符对应一个不同的 Unicode 编码，它只规定了符号的二进制代码，却没有规定这个二进制代码在计算机中如何编码传输。UTF-8 是一种对 Unicode 的编码方式，它是一种变长的编码方式，可以用 1~4 个字节来表示一个字符。
+
+## js 的事件循环是什么？
+
+相关知识点：
+事件队列是一个存储着待执行任务的队列，其中的任务严格按照时间先后顺序执行，排在队头的任务将会率先执行，而排在队尾的任务会最后执行。事件队列每次仅执行一个任务，在该任务执行完毕之后，再执行下一个任务。执行栈则是一个类似于函数调用栈的运行容器，当执行栈为空时，JS 引擎便检查事件队列，如果不为空的话，事件队列便将第一个任务压入执行栈中运行。
+
+回答：
+
+因为 js 是**单线程**运行的，在代码执行的时候，通过**将不同函数的执行上下文压入执行栈中来保证代码的有序执**行。在执行同步代码的时候，如果遇到了**异步事件**，js 引擎并不会一直等待其返回结果，而是会将这个事件挂起，继续执行执行栈中的其他任务。当异步事件执行完毕后，再将异步事件对应的回调加入到与当前执行栈中不同的另一个任务队列中等待执行。**任务队列**可以分为宏任务对列和微任务对列，当当前执行栈中的事件执行完毕后，js 引擎首先会判断微任务对列中是否有任务可以执行，如果有就将微任务队首的事件压入栈中执行。当微任务对列中的任务都执行完成后再去判断宏任务对列中的任务。
+
+微任务包括了 promise 的回调、node 中的 process.nextTick 、对 Dom 变化监听的 MutationObserver。
+
+宏任务包括了 script 脚本的执行、setTimeout ，setInterval ，setImmediate 一类的定时事件，还有如 I/O 操作、UI 渲染等。
+
+## js 中的深浅拷贝实现
+
+浅拷贝的实现
+
+```js
+function shallowCopy(object) {
+  // 只拷贝对象
+  if (!object || typeof object !== "object") return;
+  // 根据 object 的类型判断是新建一个数组还是对象
+  let newObject = Array.isArray(object) ? [] : {};
+  // 遍历 object，并且判断是 object 的属性才拷贝
+  for (let key in object) {
+    if (object.hasOwnProperty(key)) {
+      newObject[key] = object[key];
+    }
+  }
+  return newObject;
+}
+```
+
+## 深拷贝的实现
+
+```js
+function deepCopy(object) {
+  if (!object || typeof object !== "object") return;
+  let newObject = Array.isArray(object) ? [] : {};
+  for (let key in object) {
+    if (object.hasOwnProperty(key)) {
+      newObject[key] =
+        typeof object[key] === "object" ? deepCopy(object[key]) : object[key];
+    }
+  }
+  return newObject;
+}
+```
+
+浅拷贝指的是将一个对象的属性值复制到另一个对象，如果有的属性的值为引用类型的话，那么会将这个引用的地址复制给对象，因此两个对象会有同一个引用类型的引用。浅拷贝可以使用 Object.assign 和展开运算符来实现。
+
+深拷贝相对浅拷贝而言，如果遇到属性值为引用类型的时候，它新建一个引用类型并将对应的值复制给它，因此对象获得的一个新的引用类型而不是一个原有类型的引用。**深拷贝对于一些对象可以使用 JSON 的两个函数来实现**，**但是由于 JSON 的对象格式比 js 的对象格式更加严格，所以如果属性值里边出现函数或者 Symbol 类型的值时，会转换失败**。
+
+## 手写 call 、apply 及 bind 函数
+
+call 函数实现
+
+```js
+Function.prototype.myCall = function (context) {
+  // 判断调用对象
+  if (typeof this !== "function") {
+    console.error("type error");
+  }
+  // 获取参数
+  let args = [...arguments].slice(1),
+    result = null;
+  // 判断 context 是否传入，如果未传入则设置为 window
+  context = context || window;
+  // 将调用函数设为对象的方法
+  context.fn = this;
+  // 调用函数
+  result = context.fn(...args);
+  // 将属性删除
+  delete context.fn;
+  return result;
+};
+```
+
+call 函数的实现步骤：
+
+- 判断调用对象是否为函数，即使我们是定义在函数的原型上的，但是可能出现使用 call 等方式调用的情况。
+- 判断传入上下文对象是否存在，如果不存在，则设置为 window 。
+- 处理传入的参数，截取第一个参数后的所有参数。
+- 将函数作为上下文对象的一个属性。
+- 使用上下文对象来调用这个方法，并保存返回结果。
+- 删除刚才新增的属性。
+- 返回结果
+
+apply 函数实现
+
+```js
+Function.prototype.myApply = function (context) {
+  // 判断调用对象是否为函数
+  if (typeof this !== "function") {
+    throw new TypeError("Error");
+  }
+  let result = null;
+  // 判断 context 是否存在，如果未传入则为 window
+  context = context || window;
+  // 将函数设为对象的方法
+  context.fn = this;
+  // 调用方法
+  if (arguments[1]) {
+    result = context.fn(...arguments[1]);
+  } else {
+    result = context.fn();
+  }
+  // 将属性删除
+  delete context.fn;
+  return result;
+};
+```
+
+apply 函数的实现步骤：
+
+- 判断调用对象是否为函数，即使我们是定义在函数的原型上的，但是可能出现使用 call 等方式调用的情况。
+- 判断传入上下文对象是否存在，如果不存在，则设置为 window 。
+- 将函数作为上下文对象的一个属性。
+- 判断参数值是否传入
+- 使用上下文对象来调用这个方法，并保存返回结果。
+- 删除刚才新增的属性
+- 返回结果
+
+bind 函数实现
+
+```js
+Function.prototype.myBind = function (context) {
+  // 判断调用对象是否为函数
+  if (typeof this !== "function") {
+    throw new TypeError("Error");
+  }
+  // 获取参数
+  var args = [...arguments].slice(1),
+    fn = this;
+  return function Fn() {
+    // 根据调用方式，传入不同绑定值
+    return fn.apply(
+      this instanceof Fn ? this : context,
+      args.concat(...arguments)
+    );
+  };
+};
+```
+
+bind 函数的实现步骤：
+
+- 判断调用对象是否为函数，即使我们是定义在函数的原型上的，但是可能出现使用 call 等方式调用的情况。
+- 保存当前函数的引用，获取其余传入参数值。
+- 创建一个函数返回
+- 函数内部使用 apply 来绑定函数调用，需要判断函数作为构造函数的情况，这个时候需要传入当前函数的 this 给 apply 调用，其余情况都传入指定的上下文对象。
+
+## 函数柯里化的实现
+
+函数柯里化指的是一种将使用多个参数的一个函数转换成一系列使用一个参数的函数的技术。
+
+```js
+function curry(fn, args) {
+  // 获取函数需要的参数长度
+  let length = fn.length;
+  args = args || [];
+  return function () {
+    let subArgs = args.slice(0);
+    // 拼接得到现有的所有参数
+    for (let i = 0; i < arguments.length; i++) {
+      subArgs.push(arguments[i]);
+    }
+    // 判断参数的长度是否已经满足函数所需参数的长度
+    if (subArgs.length >= length) {
+      // 如果满足，执行函数
+      return fn.apply(this, subArgs);
+    } else {
+      // 如果不满足，递归返回科里化的函数，等待参数的传入
+      return curry.call(this, fn, subArgs);
+    }
+  };
+}
+```
+
+es6
+
+```js
+function curry(fn, ...args) {
+  return fn.length <= args.length ? fn(...args) : curry.bind(null, fn, ...args);
+}
+```
+
+## 为什么 0.1 + 0.2 != 0.3？如何解决这个问题
+
+当计算机计算 0.1+0.2 的时候，实际上计算的是这两个数字在计算机里所存储的二进制，**0.1和 0.2 在转换为二进制表示的时候会出现位数无限循环的情况**。**js 中是以 64 位双精度格式来存储数字的，只有 53 位的有效数字**，超过这个长度的位数会被截取掉这样就造成了精度丢失的问题。这是第一个会造成精度丢失的地方。在对两个以 64 位双精度格式的数据进行计算的时候，首先会进行**对阶的处理**，对阶指的是将阶码对齐，也就是将小数点的位置对齐后，再进行计算，一般是小阶向大阶对齐，因此小阶的数在**对齐的过程中，有效数字会向右移动**，**移动后超过有效位数的位会被截取掉**，这是第二个可能会出现精度丢失的地方。当两个数据阶码对齐后，进行**相加运算后，得到的结果可能会超过 53 位有效数字**，因此超过的位数也会被截取掉，这是可能发生精度丢失的第三个地方。
+
+对于这样的情况，我们可以将其转换为整数后再进行运算，运算后再转换为对应的小数，以这种方式来解决这个问题。
+
+我们还可以将两个数相加的结果和右边相减，如果相减的结果小于一个极小数，那么我们就可以认定结果是相等的，这个极小数可以使用 es6 的 Number.EPSILON
+
+##  原码、反码和补码的介绍
+
+原码是计算机中对数字的二进制的定点表示方法，最高位表示符号位，其余位表示数值位。优点是易于分辨，缺点是不能够直接参与运算。
+
+**正数的反码和其原码一样；负数的反码，符号位为 1，数值部分按原码取反**。
+
+如`[+7]`原 = 00000111，`[+7]`反 = 00000111； `[-7]`原 = 10000111，`[-7]`反 = 11111000。
+正数的补码和其原码一样；负数的补码为其反码加 1。
+
+例如 `[+7]`原 = 00000111，`[+7]`反 = 00000111，`[+7]`补 = 00000111；`[-7]`原 = 10000111，`[-7]`反 = 11111000，`[-7]`补 = 11111001
+
+之所以在计算机中使用补码来表示负数的原因是，这样可以将加法运算扩展到所有的数值计算上，因此在数字电路中我们只需要考虑加法器的设计就行了，而不用再为减法设置新的数字电路。
+
+## toPrecision 和 和 toFixed 和 和 Math.round 的区别
+
+toPrecision 用于处理精度，精度是从左至右第一个不为 0 的数开始数起。
+
+toFixed 是对小数点后指定位数取整，从小数点开始数起。
+
+Math.round 是将一个数字四舍五入到一个整数。
+
+## 什么是 XSS 范 攻击？如何防范 XSS 攻击
+
+XSS 攻击指的是**跨站脚本攻击**，是一种代码注入攻击。攻击者通过在网站注入恶意脚本，使之在用户的浏览器上运行，从而**盗取用户的信息如 cookie 等**。
+
+XSS 的本质是因为网站没有对恶意代码进行过滤，与正常的代码混合在一起了，浏览器没有办法分辨哪些脚本是可信的，从而导致了恶意代码的执行。
+
+XSS 一般分为**存储型、反射型和 DOM 型**。
+
+存储型指的是**恶意代码提交到了网站的数据库中**，当用户请求数据的时候，服务器将其拼接为HTML 后返回给了用户，从而导致了恶意代码的执行。
+
+反射型指的是攻击者**构建了特殊的 URL**，当服务器接收到请求后，从 URL 中获取数据，拼接到HTML 后返回，从而导致了恶意代码的执行。
+
+DOM 型指的是攻击者**构建了特殊的 URL**，用户打开网站后，js 脚本从 URL 中获取数据，从而导致了恶意代码的执行。
+
+XSS 攻击的预防可以从两个方面入手，一个是**恶意代码提交**的时候，一个是**浏览器执行恶意代码**的时候。
+
+对于第一个方面，如果我们对存入数据库的数据都进行的**转义**处理，但是一个数据可能在多个地方使用，有的地方可能不需要转义，由于我们没有办法判断数据最后的使用场景，所以直接在输入端进行恶意代码的处理，其实是不太可靠的。因此我们可以从浏览器的执行来进行预防，一种是使用纯前端的方式，不用服务器端拼接后返回。另一种是对需要插入到 HTML 中的代码做好充分的转义。
+
+对于 DOM 型的攻击，主要是前端脚本的不可靠而造成的，我们对于数据获取渲染和字符串拼接的时候应该对可能出现的恶意代码情况进行判断。
+
+还有一些方式，比如使用 CSP ，**CSP 的本质是建立一个白名单**，告诉浏览器哪些外部资源可以加载和执行，从而防止恶意代码的注入攻击。还可以对一些敏感信息进行保护，比如 cookie 使用 http-only ，使得脚本无法获取。也可以使用验证码，避免脚本伪装成用户执行一些操作。
+
+## 什么是 CSP
+
+CSP 指的是**内容安全策略**，它的本质是建立一个白名单，告诉浏览器哪些外部资源可以加载和执行。我们只需要配置规则，如何拦截由浏览器自己来实现。通常有两种方式来开启 CSP，一种是**设置 HTTP 首部中的 Content-Security-Policy**，一种是**设置 meta 标签的方式 `<meta http-equiv="Content-Security-Policy">`**
+
+## 什么是 CSRF 范 攻击？如何防范 CSRF 攻击？
+
+CSRF 攻击指的是**跨站请求伪造攻击**，攻击者**诱导用户进入一个第三方网站，然后该网站向被攻击网站发送跨站请求**。如果用户在被攻击网站中保存了登录状态，那么攻击者就可以利用这个登录状态，绕过后台的用户验证，冒充用户向服务器执行一些操作。
+
+CSRF 攻击的**本质是利用了 cookie 会在同源请求中携带发送给服务器的特点**，以此来实现用户的冒充。
+
+一般的 CSRF 攻击类型有三种：
+
+第一种是 **GET 类型的 CSRF 攻击**，比如在网站中的一个 img 标签里构建一个请求，当用户打开这个网站的时候就会自动发起提交。
+
+第二种是**POST 类型的 CSRF 攻击**，比如说构建一个表单，然后隐藏它，当用户进入页面时，自动提交这个表单。
+
+第三种是**链接类型的 CSRF 攻击**，比如说在 a 标签的 href 属性里构建一个请求，然后诱导用户去点击。
+
+CSRF 可以用下面几种方法来防护：
+
+第一种是**同源检测**的方法，服务器**根据 http 请求头中 origin 或者 referer 信息来判断请求是否为允许访问的站点**，从而对请求进行过滤。当 origin 或者 referer 信息都不存在的时候，直接阻止。这种方式的缺点是有些情况下 referer 可以被伪造。还有就是我们这种方法同时把搜索引擎的链接也给屏蔽了，所以一般网站会允许搜索引擎的页面请求，但是相应的页面请求这种请求方式也可能被攻击者给利用。
+
+第二种方法是**使用 CSRF Token 来进行验证**，服务器向用户**返回一个随机数 Token**，当网站再次发起请求时，在请求参数中加入服务器端返回的 token ，然后服务器对这个 token 进行验证。这种方法解决了使用 cookie 单一验证方式时，可能会被冒用的问题，但是这种方法存在一个缺点就是，我们需要给网站中的所有请求都添加上这个 token，操作比较繁琐。还有一个问题是一般不会只有一台网站服务器，如果我们的请求经过负载平衡转移到了其他的服务器，但是这个服务器的 session 中没有保留这个 token 的话，就没有办法验证了。这种情况我们可以通过改变 token 的构建方式来解决。
+
+第三种方式使用**双重 Cookie 验证**的办法，服务器在用户访问网站页面时，向请求域名注入一个 Cookie，内容为随机字符串，然后当用户再次向服务器发送请求的时候，从 cookie 中取出这个字符串，添加到 URL 参数中，然后服务器通过对 cookie 中的数据和参数中的数据进行比较，来进行验证。使用这种方式是利用了攻击者只能利用 cookie，但是不能访问获取 cookie的特点。并且这种方法比 CSRF Token 的方法更加方便，并且不涉及到分布式访问的问题。这种方法的缺点是如果网站存在 XSS 漏洞的，那么这种方式会失效。同时这种方式不能做到子域名的隔离。
+
+第四种方式是使用**在设置 cookie 属性的时候设置 Samesite** ，**限制 cookie 不能作为被第三方使用**，从而可以避免被攻击者利用。Samesite 一共有两种模式，一种是严格模式，在严格模式下 cookie 在任何情况下都不可能作为第三方 Cookie 使用，在宽松模式下，cookie 可以被请求是 GET 请求，且会发生页面跳转的请求所使用。
+
+## 什么是 Samesite Cookie 属性
+
+Samesite Cookie 表示**同站 cookie**，避免 cookie 被第三方所利用。**将 Samesite 设为 strict ，这种称为严格模式**，表示这个 cookie 在任何情况下都不可能作为第三方 cookie**将 Samesite 设为 Lax ，这种模式称为宽松模式**，如果这个请求是个 GET 请求，并且这个请求改变了当前页面或者打开了新的页面，那么这个 cookie 可以作为第三方 cookie，其余情况下都不能作为第三方 cookie。使用这种方法的缺点是，因为它**不支持子域**，所以子域没有办法与主域共享登录信息，每次转入子域的网站，都回重新登录。还有一个问题就是它的兼容性不够好。
+
+## 什么是点击劫持？如何防范点击劫持
+
+点击劫持是一种视觉欺骗的攻击手段，攻击者将需要攻击的网站通过 iframe 嵌套的方式嵌入自己的网页中，并将 iframe 设置为透明，在页面中透出一个按钮诱导用户点击。我们可以**在 http 相应头中设置 X-FRAME-OPTIONS 来防御用 iframe 嵌套的点击劫持攻击**。通过不同的值，可以规定页面在特定的一些情况才能作为 iframe 来使用。
+
+## SQL 注入攻击
+
+SQL 注入攻击指的是攻击者在 HTTP 请求中注入**恶意的 SQL 代码**，服务器使用参数构建数据库SQL 命令时，恶意 SQL 被一起构造，破坏原有 SQL 结构，并在数据库中执行，达到编写程序时意料之外结果的攻击行为。
+
+## `offsetWidth/offsetHeight`,`clientWidth/clientHeight`与`scrollWidth/scrollHeight`的区别
+
++ clientWidth/clientHeight 返回的是**元素的内部宽度**，它的值只包含 content + padding，如果有滚动条，**不包含滚动条**。
++ clientTop 返回的是**上边框的宽度**。
++ clientLeft 返回的**左边框的宽度**。
++ offsetWidth/offsetHeight 返回的是**元素的布局宽度**，它的值包含 **content + padding +border 包含了滚动条**。
++ offsetTop 返回的是**当前元素相对于其 offsetParent 元素的顶部的距离**。
++ offsetLeft 返回的是**当前元素相对于其 offsetParent 元素的左部的距离**。
++ scrollWidth/scrollHeight 返回值包含 **content + padding + 溢出内容的尺寸**。
++ scrollTop 属性返回的是**一个元素的内容垂直滚动的像素数**。
++ scrollLeft 属性返回的是**元素滚动条到元素左边的距离**。
+
+## 函数式编程
+
+简单说，**"函数式编程"是一种"编程范式"（programming paradigm），也就是如何编写程序的方法论**。
+
+它具有以下特性：**闭包和高阶函数、惰性计算、递归、函数是"第一等公民"、只用"表达式"**。
+
+## 异步编程的实现方式
+
+相关资料：
+
+回调函数
+
++ 优点：简单、容易理解
++ 缺点：不利于维护，代码耦合高
+
+事件监听（采用时间驱动模式，取决于某个事件是否发生）：
+
++ 优点：容易理解，可以绑定多个事件，每个事件可以指定多个回调函数
++ 缺点：事件驱动型，流程不够清晰
+
+发布/订阅（观察者模式）
+
++ 类似于事件监听，但是可以通过‘消息中心’，了解现在有多少发布者，多少订阅者
+
+Promise 对象
+
++ 优点：可以利用 then 方法，进行链式写法；可以书写错误时的回调函数；
++ 缺点：编写和理解，相对比较难
+
+Generator 函数
+
++ 优点：函数体内外的数据交换、错误处理机制
++ 缺点：流程管理不方便
+
+async 函数
+
++ 优点：内置执行器、更好的语义、更广的适用性、返回的是 Promise、结构清晰。
++ 缺点：错误处理机制
+
+回答：
+
+js 中的异步机制可以分为以下几种：
+
+第一种最常见的是使用回调函数的方式，使用回调函数的方式有一个缺点是，**多个回调函数嵌套的时候会造成回调函数地狱**，上下两层的回调函数间的代码耦合度太高，不利于代码的可维护。
+
+第二种是 Promise 的方式，使用 Promise 的方式可以**将嵌套的回调函数作为链式调用**。但是使用这种方法，有时会**造成多个 then 的链式调用，可能会造成代码的语义不够明确**。
+
+第三种是使用 generator 的方式，它可以在函数的执行过程中，**将函数的执行权转移出去**，**在函数外部我们还可以将执行权转移回**来。当我们遇到异步函数执行的时候，将函数执行权转移出去，当异步函数执行完毕的时候我们再将执行权给转移回来。因此我**们在 generator 内部对于异步操作的方式，可以以同步的顺序来书写**。**使用这种方式我们需要考虑的问题是何时将函数的控制权转移回来，因此我们需要有一个自动执行 generator 的机制，比如说 co 模块等方式来实现 generator 的自动执行**。
+
+第四种是使用 async 函数的形式，**async 函数是 generator 和 promise 实现的一个自动执行的语法糖**，它**内部自带执行器**，当函数内部执行到一个 await 语句的时候，如果语句返回一个 promise 对象，那么函数将会等待 promise 对象的状态变为 resolve 后再继续向下执行。因此我们**可以将异步逻辑，转化为同步的顺序来书写，并且这个函数可以自动执行**。
+
+## Js 与 动画与 CSS 动画区别及相应实现
+
++ CSS3 的动画的优点:在性能上会稍微好一些，浏览器会对 CSS3 的动画做一些优化代码相对简单
++ 缺点:在动画控制上不够灵活兼容性不好
+
+JavaScript 的动画正好弥补了这两个缺点，控制能力很强，可以单帧的控制、变换，同时写得好完全可以兼容 IE6，并且功能强大。**对于一些复杂控制的动画，使用 javascript 会比较靠谱**。而在实现一些小的交互动效的时候，就多考虑考虑 CSS 吧
 
 ## 
